cf_analysis_results/checkerframework_3.42.0_results/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8.txt
../dataset/june2020_dataset/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/CSVExporter.java:61: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.Writer $$ regular method exit $$ ( 1915, 2002 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
      out = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(newFile), "UTF8"));
          ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/CSVExporter.java:154: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.Writer $$ regular method exit $$ ( 4353, 4440 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
      out = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(newFile), "UTF8"));
          ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
